--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -9,9 +9,9 @@
   }
 
   h2{
-    color: rebeccapurple;
+    color: saddlebrown;
     font-size: 25px;
     font-weight: bold;
-    text-shadow: deepskyblue 2px 2px 4px;
+    text-shadow: rgb(160, 97, 53) 2px 2px 4px;
   }
 }
