--- a/src/pages/styles/home.scss
+++ b/src/pages/styles/home.scss
@@ -1,9 +1,24 @@
+.selects {
+  padding: 5px 10px;
+  margin-left: 5px;
+  border: 1px solid rgb(233, 232, 232);
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+
+.input {
+  @media (max-width: 800px) {
+    margin-right: 20px;
+  }
+}
+
 .cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   gap: 30px 20px;
 
   @media (max-width: 768px) {
-    padding: 20px;
+    padding: 5px 20px;
+    margin: 10px 0 !important;
   }
 }
