--- a/src/pages/styles/undefined.scss
+++ b/src/pages/styles/undefined.scss
@@ -1,4 +1,9 @@
 img{
     width: 400px;
     height: auto;
+
+    @media (max-width:800px) {
+        width: 250px;
+        height: auto;
+    }
 }
